* Calls Detail: fix broken chronological ordering of call records. Spotted while
  fixing Elastix bug #373.
* Calls Detail: when filtering by phone number, the SELECT statement for incoming
  calls failed to take into account that there might be no contact available for
  a given incoming call, but the Caller ID was available anyway. This resulted in
  missing incoming calls when filtering by telephone. Fixed. Should fix Elastix 
  bug #373.

1.5-3.5 (SVN revision 1563)
* Dialer: add and use new column to record timestamp of Originate execution for
  call. This is needed for upcoming support for outgoing monitoring 
  information. 
* Reports Break: rewrite introduced a regression in date select that prevented
  data from being fetched if the start and end date are the same. Fixed. Should
  fix Elastix bug #360.
* Dialer: fix accessing of undefined Uniqueid variable in OnDial event.
* Agent Console: recognize call attributes that are HTTP URLs, and display them
  as hyperlinks.
* Dialer: merge fix to prevent stale pidfile that happens to match an active 
  process from making the daemon hang on startup. See Elastix bug #356. 
* Agent Console: add interface for scheduling of calls to particular agents. 
  This support requires a specific context to work properly.

1.5-3.4
* Installer: The ALTER TABLE embedded in the middle of the SQL script to create
  the database will not work for creating the complete database in the clean
  install case. The script stops processing on the first error, so the remainder
  of the tables are not created. Embedding the creation in a stored procedure
  works in Elastix 2.0 but not in Elastix 1.6 due to Elastix bug #71. This makes
  it necessary to duplicate the schema check and update in PHP code.

1.5-3.3
* Clients: implement download of existing contact information.
* Clients: rewrite file upload support to resemble campaign upload code, and 
  detect charset encoding. Intended to fix Elastix bug #334.